fixed the case where the button changes colors to white on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,6 +188,7 @@ footer button {
   max-width: 150px;
   padding: 12px;
   border-radius: 15px;
+  color: black;
 }
 
 footer button:hover {
